gateone.js:  Fixed the bug where you couldn't highlight text.  Still having some issues with this in Firefox though.  I'm working on it. gateone.js:  Trying really hard to make it so you can middle-click-to-paste in Chrome in Windows.  Why oh why does it not work?  Argh! CSS Themes:  Minor tweak to work around Windows' piss poor font sizing.  On other platforms this means the toolbar and sideinfo panel will appear a little further to the left than normal but  on Windows it will prevent them from being partially obscured by the scrollbar.  I need to figure out a better way or just convince the world to stop using Windows.  Not sure at this point which will bear more fruit.

--- a/gateone/templates/themes/black.css
+++ b/gateone/templates/themes/black.css
@@ -229,7 +229,7 @@ hr {
     z-index:600;
     position:absolute;
     top:0;
-    right:1.2em;
+    right:1.6em;
     color: #fff;
     text-align: right;
 }
@@ -313,7 +313,7 @@ hr {
     -o-transform-origin: right bottom;
     transform: rotate(90deg);
     transform-origin: right bottom;
-    right: 1.9em;
+    right: 2.2em;
     bottom: 0;
     color: white;
     position: absolute;
