--- a/gateone/templates/themes/white.css
+++ b/gateone/templates/themes/white.css
@@ -230,7 +230,7 @@ hr {
     z-index:600;
     position:absolute;
     top:0;
-    right:1.2em;
+    right:1.6em;
     color: #000;
     text-align: right;
 }
@@ -315,7 +315,7 @@ hr {
     -o-transform-origin: right bottom;
     transform: rotate(90deg);
     transform-origin: right bottom;
-    right: 1.9em;
+    right: 2.2em;
     bottom: 0;
     color: black;
     position: absolute;
